building models components for code

--- a/package.json
+++ b/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "SOCIALAPI",
+  "version": "1.0.1",
+  "description": "Mongoose back-end project - Main",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "start": "node index",
+    "dev": "nodemon index",
+    "seed": "node utils/seed",
+    "heroku-postbuild": "node utils/seed.js"
+  },
   "dependencies": {
     "express": "^4.17.3",
     "mongoose": "^6.2.10",
